# looking-glass

./: .env.example  .gitignore  AGENTS.md  ARCHIVED_SESSIONS.md  README.md  SESSION_STATE.md  pyproject.toml
.claude/: settings.json
.claude/agents/: banyan.md  birch.md  cedar.md  cypress.md  magnolia.md  pine.md  redwood.md
.claude/hooks/: post-edit-lint.sh  stop-session-state.sh
data/: schema-notes.md
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.colorTokens.test.tsx  App.test.tsx  App.tsx  main.tsx
specs/: 001-ingest-pipeline.md  002-arbitrage-score.md  003-role-picker-matrix.md  004-resume-gap-layer.md  005-template-narrator.md  006-deterministic-extraction.md  007-jest-axe-types.md  008-unify-status-color-tokens.md  009-results-empty-loading-states.md  010-scatter-legend-touch-motion.md  011-widen-roles-to-fifteen.md  012-correct-role-coverage-docs.md  013-salary-premium-phrase-helper.md  014-salary-premium-table-footnote.md  015-fix-light-mode-contrast.md  016-fix-responsive-text-wrapping.md  017-glassmorphism-card-nav-chrome.md
src/ingest/: __init__.py  __main__.py  corroborate.py  join_core.py  load_supabase.py  normalize.py  parse.py  (+2 more)
tests/: test_arbitrage_loader_idempotency.py  test_arbitrage_schema.py  test_arbitrage_score.py  test_data_invariants.py  test_extract_resume_skills_function.py  test_frontend_read_layer_migration.py  test_ingest_parse.py  test_loader_idempotency.py  test_normalize.py  test_schema_constraints.py  test_skill_core_join.py
(+59 files in other folders)
