[project]
name = "looking-glass"
version = "0.1.0"
description = "Looking Glass — High-Leverage Pivot Engine (ingest/scoring backend)"
requires-python = ">=3.12"
dependencies = [
    "supabase>=2.31.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
